# denshikawa

./: .env.example  .gitignore  README.md  package.json
apps/api/: Cargo.toml
apps/api/migrations/: 20251211125740_init_users.sql  20251212101614_add_user_role.sql  20251212101615_create_refresh_tokens.sql  20251212130433_create_manga_schema.sql  20251213120000_create_reading_history.sql
apps/api/src/: config.rs  db.rs  lib.rs  main.rs  state.rs
apps/api/src/auth/: error.rs  jwt.rs  middleware.rs  mod.rs  password.rs
apps/api/src/http/: mod.rs
apps/api/src/http/routes/: get_user_by_id.rs  health.rs  mod.rs  proxy.rs
apps/api/src/http/routes/auth/: login.rs  logout.rs  mod.rs  refresh.rs  register.rs
apps/api/src/http/routes/chapters/: mod.rs  navigation.rs  pages.rs
apps/api/src/http/routes/manga/: chapters.rs  get_manga.rs  latest.rs  mod.rs  popular.rs  search.rs
apps/api/src/http/routes/users/: bookmarks.rs  history.rs  library.rs  me.rs  mod.rs  progress.rs
apps/api/src/manga/: mod.rs  models.rs
apps/api/src/mangadex/: cache.rs  client.rs  error.rs  mod.rs  types.rs
apps/web/: next.config.ts  package.json
apps/web/app/: layout.tsx  providers.tsx
apps/web/app/(auth)/: layout.tsx
apps/web/app/(auth)/login/: page.tsx
apps/web/app/(auth)/register/: page.tsx
apps/web/app/(main)/: layout.tsx  page.tsx
apps/web/app/(main)/manga/[id]/: page.tsx
apps/web/app/(main)/search/: page.tsx
apps/web/components/auth/: auth-guard.tsx  auth-modal.tsx  login-form.tsx  register-form.tsx
apps/web/components/layout/: header.tsx
apps/web/components/manga/: latest-manga-section.tsx  manga-card-skeleton.tsx  manga-card.tsx  popular-manga-section.tsx
apps/web/components/shared/: protected-action.tsx
apps/web/hooks/: use-auth.ts  use-manga.ts
apps/web/lib/: constants.ts
apps/web/lib/api/: auth.ts  chapters.ts  client.ts  endpoints.ts  index.ts  manga.ts  query-keys.ts  user.ts
apps/web/lib/schemas/: auth.ts  chapter.ts  index.ts  manga.ts  user.ts
apps/web/lib/utils/: format.ts  index.ts  storage.ts
apps/web/stores/: auth-modal-store.ts  auth-store.ts
apps/web/types/: api.ts  chapter.ts  index.ts  manga.ts  user.ts
tools/api-runner/: README.md  package.json
