[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5"
async-trait = "0.1"
axum = "0.8.7"
backoff = "0.4"
governor = "0.6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
lazy_static = "1.5"
regex = "1.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "uuid",
    "chrono",
] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-governor = { package = "tower_governor", version = "0.8" }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
tower = "0.5.2"
